fix: hide minimised conversations list while one is active on mobile

--- a/stylesheets/_session_left_pane.scss
+++ b/stylesheets/_session_left_pane.scss
@@ -26,8 +26,10 @@
 }
 .mobile-active-conversation {
   width: 1px;
+  margin-left: -1px;
   @media screen and (min-width: 680px) {
     width: 100%;
+    margin-left: 0px;
     max-width: var(--left-panel-width);
   }
 }
